feat(Naav): Add review
